--- a/index.html
+++ b/index.html
@@ -13,21 +13,18 @@
 
 
     <script>
-      //Your web app's Firebase configuration
-      var firebaseConfig = {
-        apiKey: "AIzaSyBYV9kWljd-8zlRsYSLGIv2zBX4MhkNAo8",
-        authDomain: "multiplayer-car-racing-game.firebaseapp.com",
-        databaseURL: "https://multiplayer-car-racing-game.firebaseio.com",
-        projectId: "multiplayer-car-racing-game",
-        storageBucket: "",
-        messagingSenderId: "936147099930",
-        appId: "1:936147099930:web:dba47c5bb648f4ef"
-      };
-      // // Initialize Firebase
-      // firebase.initializeApp(firebaseConfig);
-
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyAq-0CFznqSuoAuAw2B32Q0yu4wWh44ObM",
+    authDomain: "tanmay-c34.firebaseapp.com",
+    databaseURL: "https://tanmay-c34.firebaseio.com",
+    projectId: "tanmay-c34",
+    storageBucket: "tanmay-c34.appspot.com",
+    messagingSenderId: "458830592799",
+    appId: "1:458830592799:web:8d3573ceb119522a13ce2a"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
     </script>
 
     <script src="js/Player.js"></script>
